--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_install:
   - npm install -g mocha
 
 script:
-  - istanbul cover _mocha -- -R spec tests/
+  - istanbul cover _mocha --report lcovonly -- -R spec tests/ && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
 
 services:
   - mongodb
